--- a/components/MainLayout.module.css
+++ b/components/MainLayout.module.css
@@ -5,8 +5,10 @@
     display: flex;
 }
 .logo {
-    margin: 0;
-    padding: 20px;
+    color: white;
+    font-family: 'Righteous', cursive;
+    font-size: 20px;
+    text-transform: uppercase;
     width: 150px;
 }
 .menu {
